--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined"
       rel="stylesheet">
 <div class="container">
+  <base href="/">
   <my-app>loading</my-app>
 </div>
